# scalapackpp

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: cmake.yml
.github/workflows/scripts/: build_mpich.sh  build_scalapack.sh
cmake/: HandleCatch2.cmake  scalapackpp-config.cmake.in
cmake/modules/: FindBLACS.cmake  FindBLAS.cmake  FindScaLAPACK.cmake
cmake/modules/linalg-modules/: FindIntelMKL.cmake  FindReferenceLAPACK.cmake
include/scalapackpp/: block_cyclic.hpp  block_cyclic_matrix.hpp  descinit.hpp  fill_triangle.hpp  geadd.hpp  gemm.hpp  gevp.hpp  heev.hpp  information.hpp  lacpy.hpp  lascl.hpp  matrix_norm.hpp  potrf.hpp  potrs.hpp  scatter_gather.hpp  sevp.hpp  svd.hpp  syev.hpp  tradd.hpp  transpose.hpp  trmm.hpp  trsm.hpp  types.hpp
include/scalapackpp/eigenvalue_problem/: gevp.hpp  heev.hpp  sevp.hpp  syev.hpp
include/scalapackpp/factorizations/: geqpf.hpp  geqrf.hpp  getrf.hpp  potrf.hpp
include/scalapackpp/householder/: apply_q_householder.hpp  generate_q_householder.hpp  orgqr.hpp  ormqr.hpp  ungqr.hpp  unmqr.hpp
include/scalapackpp/linear_systems/: gels.hpp  gesv.hpp  getrs.hpp  posv.hpp  potrs.hpp  trtrs.hpp
include/scalapackpp/matrix_inverse/: getri.hpp  potri.hpp  trtri.hpp
include/scalapackpp/matrix_norm/: general_norm.hpp  symmetric_norm.hpp
include/scalapackpp/pblas/: axpy.hpp  copy.hpp  gemm.hpp  gemv.hpp  hemm.hpp  hemv.hpp  inner_product.hpp  nrm2.hpp  scal.hpp  symm.hpp  symv.hpp  trmm.hpp  trsm.hpp
include/scalapackpp/util/: math.hpp  sfinae.hpp  type_conversions.hpp  type_traits.hpp
include/scalapackpp/wrappers/: descinit.hpp  geadd.hpp  gemm.hpp  gemr2d.hpp  gesvd.hpp  lacpy.hpp  lascl.hpp  potrf.hpp  tradd.hpp  trmm.cpp  trsm.hpp
include/scalapackpp/wrappers/eigenvalue_problem/: heev.hpp  hegst.hpp  syev.hpp  sygst.hpp
include/scalapackpp/wrappers/factorizations/: geqpf.hpp  geqrf.hpp  getrf.hpp  potrf.hpp
include/scalapackpp/wrappers/householder/: orgqr.hpp  ormqr.hpp  ungqr.hpp  unmqr.hpp
include/scalapackpp/wrappers/linear_systems/: gels.hpp  gesv.hpp  getrs.hpp  posv.hpp  potrs.hpp  trtrs.hpp
include/scalapackpp/wrappers/matrix_inverse/: getri.hpp  potri.hpp  trtri.hpp
include/scalapackpp/wrappers/matrix_norm/: lange.hpp  lanhe.hpp  lansy.hpp
include/scalapackpp/wrappers/pblas/: axpy.hpp  copy.hpp  dot.hpp  gemm.hpp  gemv.hpp  hemm.hpp  hemv.hpp  nrm2.hpp  scal.hpp  symm.hpp  symv.hpp  trmm.hpp  trsm.hpp
src/: CMakeLists.txt  axpy.cxx  block_cyclic.cxx  copy.cxx  descinit.cxx  dot.cxx  geadd.cxx  gels.cxx  gemm.cxx  gemr2d.cxx  gemv.cxx  geqpf.cxx  geqrf.cxx  gesv.cxx  gesvd.cxx  getrf.cxx  getri.cxx  getrs.cxx  heev.cxx  hegst.cxx  hemm.cxx  hemv.cxx  information.cxx  lacpy.cxx  lange.cxx  lanhe.cxx  lansy.cxx  lascl.cxx  nrm2.cxx  orgqr.cxx  ormqr.cxx  posv.cxx  potrf.cxx  potri.cxx  potrs.cxx  scal.cxx  syev.cxx  sygst.cxx  symm.cxx  symv.cxx  (+8 more)
tests/: CMakeLists.txt  axpy.cxx  copy.cxx  eig.cxx  geadd.cxx  gels.cxx  gemm.cxx  gemv.cxx  geqrf.cxx  gesv.cxx  gesvd.cxx  getrf_s.cxx  getri.cxx  gevp.cxx  hemm.cxx  hemv.cxx  index.cxx  inner_product.cxx  lacpy.cxx  lascl.cxx  norm.cxx  posv.cxx  potrf.cxx  potri.cxx  potrs.cxx  scal.cxx  scatter_gather.cxx  sevp.cxx  tradd.cxx  transpose.cxx  trmm.cxx  trsm.cxx  trtri.cxx  trtrs.cxx  ut.cxx  ut.hpp
tests/cmake/discovery/: CMakeLists.txt  scalapackpp_linker_test.cxx
tests/cmake/subproject/: CMakeLists.txt  scalapackpp_linker_test.cxx
